update contact card

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <img class="headshot" src="headshot.jpg">
         <h1>Billy Mitchell's Links</h1>
         <div class="links">
-            <a target="_blank" href="https://contact-card.billymitchell.design/billymitchell.vcf"><i
-                    class="fa-regular fa-address-book"></i>Contact Card</a>
+            <a target="_blank" href="/vcf/billymitchell.vcf"><i class="fa-regular fa-address-book"></i>Contact Card</a>
             <a target="_blank" href="4437658265"><i class="fa-solid fa-phone"></i>443-765-8265</a>
             <a href="mailto:hello@billymitchell.design"><i
                     class="fa-solid fa-envelope"></i>hello@billymitchell.design</a>
