--- a/index.html
+++ b/index.html
@@ -12,21 +12,32 @@
 </head>
 
 <body>
+    <div class="gradient-top"></div>
     <main>
         <img class="headshot" src="headshot.jpg">
-        <h1>Billy Mitchell's Links</h1>
+        <h1>Billy Mitchell</h1>
+        <p>Designer & Developer</p>
         <div class="links">
-            <a target="_blank" href="/vcf/billymitchell.vcf"><i class="fa-regular fa-address-book"></i>Contact Card</a>
-            <a target="_blank" href="4437658265"><i class="fa-solid fa-phone"></i>443-765-8265</a>
-            <a href="mailto:hello@billymitchell.design"><i
-                    class="fa-solid fa-envelope"></i>hello@billymitchell.design</a>
-            <a target="_blank" href="https://billymitchell.design/"><i class="fa-solid fa-globe"></i>Website</a>
-            <a target="_blank" href="https://twitter.com/designbilly"><i class="fa-brands fa-twitter"></i>Twitter</a>
-            <a target="_blank" href="https://www.linkedin.com/in/billymitchelldesign/"><i
-                    class="fa-brands fa-linkedin"></i>Linkedin</a>
+            <a target="_blank" href="/vcf/billymitchell.vcf"><i class="fa-regular fa-address-book"></i><span
+                    class="button-text">Contact Card</span></a>
+            <a target="_blank" href="4437658265"><i class="fa-solid fa-phone"></i><span
+                    class="button-text">443-765-8265</span></a>
+            <a href="mailto:hello@billymitchell.design"><i class="fa-solid fa-envelope"></i><span
+                    class="button-text"></span>hello@billymitchell.design</a>
+            <a target="_blank" href="https://billymitchell.design/"><i class="fa-solid fa-globe"></i><span
+                    class="button-text">Website / Portfolio</span></a>
 
-            <a target="_blank" href="https://github.com/billymitchell"><i class="fa-brands fa-github"></i>Github</a>
+            <a target="_blank"
+                href="https://billymitchell.design/static/Billy-Mitchell-Resume-2022-3dace3b1332946a7919e85cd7e345ce2.pdf"><i
+                    class="fa-solid fa-file"></i><span class="button-text">Resume</span></a>
 
+            <div class="social-group">
+                <a target="_blank" href="https://twitter.com/designbilly"><i class="fa-brands fa-twitter"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/billymitchelldesign/"><i
+                        class="fa-brands fa-linkedin"></i></a>
+
+                <a target="_blank" href="https://github.com/billymitchell"><i class="fa-brands fa-github"></i></a>
+            </div>
         </div>
     </main>
     <!-- <script src=".js" async defer></script> -->
