Updated Tel link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="links">
             <a target="_blank" href="/vcf/billymitchell.vcf"><i class="fa-regular fa-address-book"></i><span
                     class="button-text">Contact Card</span></a>
-            <a target="_blank" href="4437658265"><i class="fa-solid fa-phone"></i><span
+            <a target="_blank" href="tel:4437658265"><i class="fa-solid fa-phone"></i><span
                     class="button-text">443-765-8265</span></a>
             <a href="mailto:hello@billymitchell.design"><i class="fa-solid fa-envelope"></i><span
                     class="button-text"></span>hello@billymitchell.design</a>
